--- a/index.html
+++ b/index.html
@@ -81,35 +81,6 @@
 								<a href=""></a>
 								<div class="project__item__images">
 									<div class="project__slider__item__image__up"><span>Допомогти</span></div>
-									<img src="images/02.jpg" alt="" srcset="">
-								</div>
-								<div class="project__item__content__content">
-								<div class="project__item__content">
-									<div class="project__item__state">Активний</div>
-									<div class="project__item__title">Lorem Ipsum - це текст-"риба", що використовується в</div>
-									<div class="project__item__text">Риба" не тільки успішно пережила п'ять століть, але й прижилася популяризувалась в 60-их роках минулого сторіччя...</div>
-								</div>
-								<div class="project__item__footer">
-									<div class="project__item__footer__progressbar"></div>
-									<div class="project__item__footer__footer">
-										<div class="project__item__footer__have">
-											<div class="project__item__footer__have__text">Зібрано</div>
-											<div class="project__item__footer__have__number">101500 грн.</div>
-										</div>
-										<div class="project__item__footer__need">
-											<div class="project__item__footer__need__text">Необхідно</div>
-											<div class="project__item__footer__need__number">203620 грн.</div>
-										</div>
-									</div>
-								</div>
-								</div>
-							</div>
-						</div>
-						<div class="list__project__body__item__row">
-							<div class="list__project__body__item">
-								<a href=""></a>
-								<div class="project__item__images">
-									<div class="project__slider__item__image__up"><span>Допомогти</span></div>
 									<img src="images/01.jpg" alt="" srcset="">
 								</div>
 								<div class="project__item__content__content">
@@ -312,12 +283,12 @@
 					<div class="controll-page">
 						<ul>
 							<li class="arrow"></li>
-						    <li ><a href="#"class="active" class="news_page">1</a></li>
-						    <li><a href="#" class="news_page">2</a></li>
-						    <li><a href="#" class="news_page">3</a></li>
-						    <li><a href="#" class="news_page">4</a></li>
-						    <li><a href="#" class="news_page dots">...</a></li>
-						    <li><a href="#" class="news_page">7</a></li>
+						    <li ><a href="#"class="active" class="lick__page">1</a></li>
+						    <li><a href="#" class="lick__page">2</a></li>
+						    <li><a href="#" class="lick__page">3</a></li>
+						    <li><a href="#" class="lick__page">4</a></li>
+						    <li><a href="#" class="lick__page dots">...</a></li>
+						    <li><a href="#" class="lick__page">7</a></li>
 							<li class="arrow arrowRight"></li>
 						</ul>
 					</div>
